# excimer_referencer

./: .gitignore  LICENSE  README.md  environment.yml  georeferencing_laser_ablaton_imgs.ipynb  pyproject.toml  spatial_ref_imgs.ipynb
excimer_referencer/: __init__.py  referencer.py
excimer_referencer/.ipynb_checkpoints/: referencer-checkpoint.py
excimer_referencer_plugin_template/: Makefile  README.html  README.txt  __init__.py  excimer_registration.py  excimer_registration_dialog.py  excimer_registration_dialog_base.ui  metadata.txt
excimer_registration_plugin_template/: pb_tool.cfg  resources.qrc
excimer_registration_plugin_template/help/source/: conf.py  index.rst
excimer_registration_plugin_template/test/: test_excimer_registration_dialog.py  test_resources.py
