[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "excimer_referencer"
author = "Ryan Avery"
author-email = "ravery@ucsb.edu"
home-page = "https://github.com/rbavery/excimer_referencer"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "pandas",
    "scikit-image", 
    "numpy",
    "affine",
    "GDAL",
    "fire"
]
requires-python = ">=3.6"
